улучшение пользовательского интерфейса
